bdd connection + rework fonctionnel

--- a/project-code/index.html
+++ b/project-code/index.html
@@ -21,9 +21,9 @@
           <h2>Résultat</h2>
           <p id="resultText"></p>
         </div>
-      </div>
+    </div>
     
-      <script src="js/ask.js"></script>
-      <script src="js/app.js"></script>
+    <script type="module" src="js/ask.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
