front + ask.js fixed

--- a/project-code/index.html
+++ b/project-code/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InnerCheck by JOMS</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div id="app">
-        <h1>InnerCheck</h1>
+        <h1><a href="index.html">InnerCheck.ia</a> <i class="bi bi-arrow-clockwise" id="restartTestIcon"></i></h1>
         <button id="startTest">Commencer le test</button>
         
         <form id="testForm" style="display: none;">
             <div id="questionContainer"></div>
-            <button type="button" id="nextQuestion" style="display: none;">Suivant</button>
             <button type="submit" id="submitTest" style="display: none;">Soumettre</button>
         </form>
     
