--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div id="app">
-        <h1><a href="index.html">InnerCheck.ia</a> <i class="bi bi-arrow-clockwise" id="restartTestIcon"></i></h1>
+        <h1><img src="assets/logo.jpg" alt=""><a href="index.html">InnerCheck.ia</a> <i class="bi bi-arrow-clockwise" id="restartTestIcon"></i></h1>
+        <div id="progressBarContainer">
+            <div id="progressBar"></div>
+        </div>
         <button id="startTest">Commencer le test</button>
         
         <form id="testForm" style="display: none;">
